[package]
name = "angelx"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
futures = "0.3.31"
futures-util = "0.3.31"
gix = "0.73.0"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "ansi"] }
